[package]
name = "img2txt"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"
if_chain = "1.0.2"
stb_image = "0.3.0"
ocrs = { version = "0.9.0", default-features = false }
rten = { version = "0.13.1", default-features = false }
anyhow = { version = "1.0.93", default-features = false }
tiny_http = { version = "0.12.0", default-features = false }
rten-tensor = { version = "0.14.1", default-features = false }

[[bin]]
name = "img2txt"
path = "main.rs"
